Closed Bug 461344 Opened 17 years ago Closed 17 years ago

abort if the version of sqlite we are using is not new enough

Categories

(Core :: SQLite and Embedded Database Bindings, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1b2

People

(Reporter: sdwilsh, Assigned: sdwilsh)

References

Details

Attachments

(1 file)

We need to abort if the version of SQLite that we happen to be linked to at run time is not the same as what we were compiled with. (from bug 461311)
Attached patch v1.0Splinter Review
This will throw up a prompt if they have a bad version of SQLite, telling them about the situation, and then calls PR_Abort().
Attachment #344500 - Flags: review?(mconnor)
Whiteboard: [has patch][needs review mconnor]
This is a user-visible message, right? So shouldn't it be localizeable? And I think you should also make it show the name instead of "the application" (like setting DEFINES += -DMOZ_APP_NAME="$(MOZ_APP_NAME)" in Makefile and then using that macro in the code).
This message is part of XULrunner, so it can't have the application name unless we implement a complicated override mechanism. This is a very edge-case message which will only occur in Linux distributions where the gecko core is not kept in sync with sqlite, and therefore I don't think it needs to be localized. The original option is to silently abort: I argued to sdwilsh that an unlocalized messages is better than no message at all, but we can go back to the silent abort if that's somehow better.
I still think that it would be better to show a "Xulrunner cannot continue" message than an "The application cannot continue" message. Given that on some systems quite some seconds can pass between click on some launcher and this message, it would be nice to have some reference. It could also be ifdefed against MOZ_XULRUNNER in such a way that at least for Firefox one would see "Firefox" (which should be most of the cases). But if you discussed this already and decided against it, then OK. In these cases I just wonder why these discussions are not reflected in the bug comments...
Attachment #344500 - Flags: review?(mconnor) → review?(benjamin)
Whiteboard: [has patch][needs review mconnor] → [has patch][needs review bsmedberg]
Attachment #344500 - Flags: review?(benjamin) → review+
Whiteboard: [has patch][needs review bsmedberg] → [has patch][has review][can land]
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [has patch][has review][can land]
Target Milestone: --- → mozilla1.9.1b2
Depends on: 1296182
Product: Toolkit → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: