Bug 461344 - abort if the version of sqlite we are using is not new enough This adds a runtime check to ensure that the version of SQLite that is running is the same as the one that we were compiled with.  If the check fails, we will display a prompt to the user, and abort. r=bsmedberg